Fix underline/overline flipping

Underline/overline flipping logic is triggered as defined in the spec[1].
The logic, however, did not handle cases where both are off, or both are
on correctly.

This patch fixes the flipping logic to handle such cases.

[1] https://drafts.csswg.org/css-text-decor-3/#default-stylesheet

BUG=738778
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2970803002
Cr-Commit-Position: refs/heads/master@{#484174}

Former-commit-id: fe56c88d9d01183d5ac0f53ea901ff66e5d2d644